--- a/myCircle.html
+++ b/myCircle.html
@@ -134,6 +134,7 @@
 <script>
 var page={
 	init:function(){
+		alert(11111);
 		this.bindEvent();
 		this.refresh({id:"circle1",number:9,direction:"Y",step:75,speed:5});
 		this.refresh({id:"circle2",number:9,direction:"X",step:70,speed:5});
